# posixpp

./: .hgignore  CMakeLists.txt  README.md  mytest.cpp  tempdevjunk.cpp
buildtools/: gen_fdflags.py
examples/: compile.cmd  helloworld.cpp  x86_64_start.s
pubincludes/posixpp/: basic.h  expected.h  fd.h  fdflags.h  modeflags.h  simpleio.h
pubincludes/pppbase/: flagset.h
pubincludes/syscalls/linux/: basic.h  simple_io.h  syscall.h
pubincludes/syscalls/linux/x86_64/: fdflags.h  modeflags.h  syscall.h
tests/: expected.cpp  fdflags.cpp  flagset.cpp  simplefd.cpp  tempdir.h
